--- a/GitHubReleasesTracker.dproj
+++ b/GitHubReleasesTracker.dproj
@@ -106,6 +106,10 @@
             <Form>FrmAddProject</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UFrmSettings.pas">
+            <Form>FrmSettings</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
