--- a/GitHubReleasesTracker.dproj
+++ b/GitHubReleasesTracker.dproj
@@ -119,6 +119,7 @@
             <Form>FrmDownloadFiles</Form>
             <FormType>dfm</FormType>
         </DCCReference>
+        <DCCReference Include="UThreadReposCheck.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
